--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/lara-mint-logo.jpg" />
+    <link rel="icon" type="image" href="/laramint-title-icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>laramint</title>
     <style>
